Story/ccls-1998_2013_15 opponents endpoints (#25)
* story(ccls-1998): add opponent endpoints

* story(ccls-1998): correct integration test sql

* story(ccls-1998): correct integration tests

* story(ccls-1998): remove boolean defaults